# weird-o

./: pyproject.toml
scripts/: dna_sequence.txt  pyvenv.cfg  script.py  script2.py  script3.py  script4.py  script6.py  script7.py  script8.py
